# chopscout

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  sample-config.json
.github/workflows/: ci.yml
docs/: architecture.md  dsp_notes.md  hardware_validation_checklist.md  mpc_compatibility.md  release.md  testing.md
scripts/: build_windows.py  generate_fixtures.py  validate_export.py
src/chopscout/: analysis.py  app.py  audio.py  autosave.py  cli.py  config.py  core.py  exporter.py  logging_config.py  midi.py  models.py  mpc.py  playback.py  session.py  slicing.py  ui.py  validation.py
src/chopscout/resources/: mpc39_16pad_template.xpj  mpc39_16pad_template.xpm
tests/: test_atomic_export.py  test_autosave.py  test_config.py  test_core.py  test_integration.py  test_midi.py  test_models.py  test_mpc_program.py  test_mpc_project.py  test_package_validation.py  test_playback.py  test_session.py  test_slicing.py  test_ui_session.py  test_ui_state.py  test_validation.py
