[project]
name = "chopscout"
version = "0.1.0"
description = "Prepare drum breaks and rhythmic loops for standalone Akai MPC workflows."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Geoff McClinsey"}]
dependencies = [
  "numpy>=2.0,<3",
  "scipy>=1.13,<2",
  "soundfile>=0.12,<1",
  "mido>=1.3,<2",
  "platformdirs>=4.2,<5",
  "PySide6>=6.8,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "pyinstaller>=6.10,<7",
]

[project.scripts]
chopscout = "chopscout.cli:main"
chopscout-gui = "chopscout.app:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chopscout"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "E701", "E702", "UP037"]
